src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint16__cast_uint16_to_int16__impl.snap
---
source: src/expr/src/scalar/func/impls/uint16.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Int16,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Int16,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastInt16ToUint16(
            CastInt16ToUint16,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
